--- a/MyPortfolio/blog.html
+++ b/MyPortfolio/blog.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Website - Services</title>
+  <title>Website - Blog</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
