--- a/MyPortfolio/about.html
+++ b/MyPortfolio/about.html
@@ -149,7 +149,7 @@
             <p>The games that I usually play is OSU which is a music rhythm game that can makes me feel relax and chilling. I also play some horror games
               such as Lunch Lady and Pacify, these horror games is fun when playing around with my friends. 
             </p>
-            <p>Coding is also one of my favorite things, I like to learn about programming languages and develop the website with myself.</p>
+            <p>Coding is also one of my favourite things, I like to learn about programming languages and develop the website with myself.</p>
           </div>
         </div>
       </div>
