--- a/Groovin/index.html
+++ b/Groovin/index.html
@@ -35,7 +35,15 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z493EFBDTV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-Z493EFBDTV');
+</script>
 <body>
 
   <!-- ======= Header ======= -->
