--- a/6612YCOM/index.html
+++ b/6612YCOM/index.html
@@ -30,6 +30,16 @@
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z493EFBDTV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Z493EFBDTV');
+</script>
+  
 <body>
 
   <!-- ======= Header ======= -->
