--- a/6612YCOM/index.html
+++ b/6612YCOM/index.html
@@ -31,13 +31,13 @@
 </head>
 
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z493EFBDTV"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VBHT3T7LFG"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-Z493EFBDTV');
+  gtag('config', 'G-VBHT3T7LFG');
 </script>
   
 <body>
